classDiagram
    %% Enum 定義は docs/MMD21_Enum.mmd を参照

    namespace ActorContext {
        class BattleActorId {
            <<Value Object>>
            +Guid Id
        }

        class BattleActorSnapshot {
            <<Value Object>>
            +BattleActorId Id
            +string DisplayName
            +BattleSide Side
            +Status BaseStatus
            +MoveSet MoveSet
        }

        class BattleActorState {
            <<Entity>>
            +BattleActorId Id
            +int CurrentHp
            +int CurrentMp
            +bool IsDead
            +IReadOnlyList~BattleAilmentState~ Ailments
            +IReadOnlyList~BattleBuffState~ Buffs
            +ReceiveDamage(value: int) void
            +RestoreHp(value: int) void
            +ConsumeMp(value: int) void
            +CanAct() bool
        }

        class BattleAilmentState {
            <<Value Object>>
            +AilmentType Type
            +int RemainingTurns
        }

        class BattleBuffState {
            <<Value Object>>
            +BuffStat Stat
            +BuffOp Op
            +decimal Value
            +int RemainingTurns
        }
    }

    namespace ActionContext {
        class BattleAction {
            <<Value Object>>
            +BattleActorId ActorId
            +BattleActionKind Kind
            +MoveId? MoveId
            +BattleTargetSelector Target
        }

        class BattleTargetSelector {
            <<Value Object>>
            +TargetType TargetType
            +AttackRange AttackRange
            +IReadOnlyList~BattleActorId~ TargetActorIds
        }

        class BattleDamageInput {
            <<Value Object>>
            +BattleActorId AttackerId
            +BattleActorId DefenderId
            +Status AttackerStatus
            +Status DefenderStatus
            +int FixedPower
            +decimal PowerRate
            +decimal CriticalRate
            +ElementType ElementType
            +bool UsesIntelligence
        }

        class BattleDamageResult {
            <<Value Object>>
            +int Damage
            +bool IsCritical
        }

        class BattleTargetResult {
            <<Value Object>>
            +BattleActorId TargetActorId
            +int Damage
            +bool IsDefeated
            +AilmentType? AppliedAilment
        }

        class BattleActionResult {
            <<Value Object>>
            +BattleActorId ActorId
            +IReadOnlyList~BattleTargetResult~ TargetResults
        }

        class BattleTurnResolution {
            <<Value Object>>
            +IReadOnlyList~BattleActionResult~ ActionResults
            +IReadOnlyList~BattleActorState~ UpdatedStates
        }
    }

    namespace ServiceContext {
        class BattleTurnOrderResolver {
            <<Domain Service>>
            +Resolve(snapshots: IEnumerable~BattleActorSnapshot~, states: IEnumerable~BattleActorState~) BattleActorId[]
        }

        class BattleStatusResolver {
            <<Domain Service>>
            +BuildEffectiveStatus(snapshot: BattleActorSnapshot, state: BattleActorState) Status
        }

        class BattleDamageCalculator {
            <<Domain Service>>
            +Calculate(input: BattleDamageInput) BattleDamageResult
        }

        class BattleActionResolver {
            <<Domain Service>>
            +Resolve(action: BattleAction, snapshots: IEnumerable~BattleActorSnapshot~, states: IEnumerable~BattleActorState~) BattleActionResult
        }

        class BattleTurnResolver {
            <<Domain Service>>
            +Resolve(actions: IEnumerable~BattleAction~, snapshots: IEnumerable~BattleActorSnapshot~, states: IEnumerable~BattleActorState~) BattleTurnResolution
        }
    }

    BattleActorState ..> BattleActorSnapshot : based_on
    BattleActorState *-- BattleActorId : has
    BattleActorState *-- BattleAilmentState : 0..*
    BattleActorState *-- BattleBuffState : 0..*
    BattleAction *-- BattleTargetSelector : has
    BattleDamageResult ..> BattleDamageInput : result_of
    BattleActionResult *-- BattleTargetResult : 0..*
    BattleTurnResolution *-- BattleActionResult : 0..*
    BattleTurnOrderResolver ..> BattleActorState : use
    BattleStatusResolver ..> BattleActorState : use
    BattleDamageCalculator ..> BattleDamageResult : builds
    BattleActionResolver ..> BattleDamageCalculator : use
    BattleActionResolver ..> BattleStatusResolver : use
    BattleTurnResolver ..> BattleAction : use
    BattleTurnResolver ..> BattleTurnResolution : builds
    BattleTurnResolver ..> BattleTurnOrderResolver : use
    BattleTurnResolver ..> BattleActionResolver : use
